===== CHANGELOG =====
Zollern Galaxy v2.0.47
=====================

[NEW]
* Added Chroma Grass and Chroma Soil blocks.
* Added the Chroma Grass Fields biome to Exodus.
    - Biome has varying colors of grass with Chroma Soil underneath.
* 

[CHANGES]
* Changed Extreme mode from x2 spawns to 2x - 4x spawns (RNG).
* 

[FIXES]
* 