@@ -40,7 +40,7 @@ public class ChunkProviderExodus extends ChunkProviderBase {
 	public static final IBlockState ICE = Blocks.ICE.getDefaultState();
 	
 	public static final double CHUNK_HEIGHT = 52.6D;
-	public static final int SEA_LEVEL = 63;
+	public static final int SEA_LEVEL = 43;
 	
 	private static final int CHUNK_SIZE_X = 16;
 	private static final int CHUNK_SIZE_Z = 16;
@@ -325,9 +325,7 @@ public class ChunkProviderExodus extends ChunkProviderBase {
 			for (int cz = chunkZ - 2; cz <= chunkZ + 2; cz++) {
 				for (int x = 0; x < ChunkProviderExodus.CHUNK_SIZE_X; x++) {
 					for (int z = 0; z < ChunkProviderExodus.CHUNK_SIZE_Z; z++) {
-						if (Math.abs(
-								this.randFromPoint(cx * 16 + x, (cz * 16 + z) * 1000)) < this.noiseGen4.getValue(x * ChunkProviderExodus.CHUNK_SIZE_X + x, cz * ChunkProviderExodus.CHUNK_SIZE_Z + z)
-										/ ChunkProviderExodus.CRATER_PROB) {
+						if (Math.abs(this.randFromPoint(cx * 16 + x, (cz * 16 + z) * 1000)) < this.noiseGen4.getValue(x * ChunkProviderExodus.CHUNK_SIZE_X + x, cz * ChunkProviderExodus.CHUNK_SIZE_Z + z) / ChunkProviderExodus.CRATER_PROB) {
 							final Random random = new Random(cx * 16 + x + (cz * 16 + z) * 5000);
 							final EnumCraterSize cSize = EnumCraterSize.sizeArray[random.nextInt(EnumCraterSize.sizeArray.length)];
 							final int size = random.nextInt(cSize.MAX_SIZE - cSize.MIN_SIZE) + cSize.MIN_SIZE;
